<resources>
    <string name="app_name">Weather App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="choose_city_text">Choose a city</string>
    <string name="my_city_text">My cities</string>
    <string name="hint_text">Your city</string>
    <string name="weather_condition_image">A ﻿graphical﻿ representation ﻿of ﻿the ﻿weather﻿ conditions</string>
    <string name="invalid_url">Invalid url</string>
    <string name="web_service_url">https://www.metaweather.com</string>
    <string name="read_error">Unable to read weather data</string>
    <string name="connect_error">Unable to connect to MetaWeather</string>
    <string name="high_temp">High: %s</string>
    <string name="low_temp">Low: %s</string>
    <string name="temp">Temp: %s</string>
    <string name="day_description">%1$s: %2$s</string>
    <string name="humidity">Humidity: %s</string>
    <string name="no_results">No results to show</string>
</resources>
