<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/conditionImageView"
        android:layout_width="@dimen/image_side_length"
        android:layout_height="match_parent"
        android:contentDescription="@string/weather_condition_image"
        android:scaleType="fitCenter"/>

    <android.support.v7.widget.GridLayout
        app:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:columnCount="3"
        app:rowCount="3"
        app:useDefaultMargins="true">

        <TextView
            android:id="@+id/dayTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/day_description"
            app:layout_column="0"
            app:layout_columnSpan="3" />
        <TextView
            android:id="@+id/tempTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="1" />
        <TextView
            android:id="@+id/lowTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_temp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="1" />

        <TextView
        android:id="@+id/hiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_temp"
        app:layout_column="2"
        app:layout_columnWeight="1"
        app:layout_row="1" />



        <TextView
            android:id="@+id/humidityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="2" />
        <TextView
            android:id="@+id/windTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_columnSpan="2"
            app:layout_row="2" />

    </android.support.v7.widget.GridLayout>
</LinearLayout>